Firefox crashes in X11 when the `_NET_WM_NAME` X11 property doesn't exist.
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox84 | --- | wontfix |
| firefox85 | --- | fixed |
| firefox86 | --- | fixed |
People
(Reporter: ideasman42, Assigned: karlt)
References
(Regression)
Details
(Keywords: regression)
Crash Data
Attachments
(2 files)
|
2.67 KB,
text/plain
|
Details | |
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:82.0) Gecko/20100101 Firefox/82.0
Steps to reproduce:
Tested in v82 and the latest build as of yesterday (sorry don't have the rev).
I ran a debug build of firefox and tracked the problem down to a crash logging the error that the _NET_WM_NAME property didn't exist.
After setting this property in the window manager (xmonad), firefox stopped crashing.
I though it was worth reporting, to redo this run the recent firefox on xmonad with a default configuration.
Actual results:
Firefox starts, crashes after 10 seconds.
Expected results:
Firefox should have not crashes.
| Reporter | ||
Comment 1•5 years ago
|
||
This is the back-trace.
#0 0x00007fcb5222a0b4 in g_log_writer_default () at /usr/lib/libglib-2.0.so.0
#1 0x00007fcb52227929 in g_log_structured_array () at /usr/lib/libglib-2.0.so.0
#2 0x00007fcb52227e81 in g_log_structured_standard () at /usr/lib/libglib-2.0.so.0
#3 0x00007fcb523932b7 in () at /usr/lib/libgdk-3.so.0
#4 0x00007fcb5198582b in _XError () at /usr/lib/libX11.so.6
#5 0x00007fcb519825d8 in () at /usr/lib/libX11.so.6
#6 0x00007fcb519837d6 in _XReply () at /usr/lib/libX11.so.6
#7 0x00007fcb51968f16 in XGetWindowProperty () at /usr/lib/libX11.so.6
#8 0x00007fcb4e47a58f in () at /usr/lib/firefox/libxul.so
#9 0x00007fcb4cd30836 in () at /usr/lib/firefox/libxul.so
#10 0x00007fcb4d591cdd in () at /usr/lib/firefox/libxul.so
#11 0x00007fcb4d8be3c4 in () at /usr/lib/firefox/libxul.so
#12 0x00007fcb4f69e831 in () at /usr/lib/firefox/libxul.so
#13 0x00007fcb4f67ebe4 in () at /usr/lib/firefox/libxul.so
#14 0x00007fcb4f69ec64 in () at /usr/lib/firefox/libxul.so
#15 0x00007fcb4fcf7b20 in () at /usr/lib/firefox/libxul.so
#16 0x000022bbd6b7ada8 in ()
#17 0x00007fffcfaab490 in ()
#18 0x00007fffcfaab418 in ()
#19 0x37d5b92473ec1700 in ()
#20 0xfff9800000000000 in ()
#21 0x00007fcb4aa29700 in () at /usr/lib/firefox/libxul.so
#22 0x000022bbd6b809c2 in ()
#23 0x0000000000004822 in ()
#24 0x00007fffcfaab510 in ()
#25 0x00007fcb1a462760 in ()
#26 0x0000000000000001 in ()
#27 0x00007fffcfaab458 in ()
#28 0xfffe302b9480fd40 in ()
#29 0xfffe3511d27b96a0 in ()
#30 0xfffe3511d27dd640 in ()
#31 0x00007fffcfaab558 in ()
#32 0x00007fcb1a462760 in ()
#33 0x000022bbd6b8314c in ()
#34 0x000000000000d021 in ()
#35 0xfffe3511d27dd640 in ()
#36 0xfffe3511d27b96a0 in ()
#37 0xfffe302b9480fd40 in ()
#38 0xfffe3511d27dd640 in ()
#39 0xfffe1881ebaa9408 in ()
#40 0xfffe26389f0c63d0 in ()
#41 0xfffe3511d27dd640 in ()
#42 0xfff8800000000000 in ()
#43 0xfffa80000000000b in ()
#44 0xfffa80000000000b in ()
#45 0xfffa80000000000b in ()
#46 0xfff9800000000000 in ()
#47 0xfff9800000000000 in ()
#48 0xfff9800000000000 in ()
#49 0xfff9800000000000 in ()
#50 0xfffe3511d27dd640 in ()
#51 0x00003511d2716d30 in ()
#52 0x00007fcb407b3168 in ()
#53 0x00007fcb1894f340 in ()
#54 0x00001881ebaa8e40 in ()
#55 0x00007fffcfaab6a8 in ()
#56 0x0000302b9481ee20 in ()
#57 0x0000000100000001 in ()
#58 0xfffe000000000006 in ()
#59 0x00007fcb4382f030 in ()
#60 0x00007fffcfaab5c0 in ()
#61 0x000022bbd6b7854f in ()
#62 0x0000000000002043 in ()
#63 0x0000302b948129c0 in ()
#64 0x0000000000000001 in ()
#65 0xfffe3511d27b96a0 in ()
#66 0xfff9000000000000 in ()
#67 0x00007fffcfaab628 in ()
#68 0x000022bbd6b81050 in ()
#69 0x00007fffcfaab630 in ()
#70 0x0000302b948129c0 in ()
#71 0x0000000000000000 in ()
| Reporter | ||
Comment 2•5 years ago
|
||
| Reporter | ||
Comment 3•5 years ago
|
||
Note, this crashes when running without a window manager too.
Comment 4•5 years ago
|
||
Hi, thanks for the report.
Setting a component for this in order to get the dev team involved.
(If the team feels it's an incorrect one please feel free to change it to a more appropriate one.)
Best regards,
Clara
Comment 5•5 years ago
|
||
It would be great to get some better tescase with the symbols - can you test mozilla nightly binaries and use mozilla crashreporter to submit a crashreport? How-to is here:
https://fedoraproject.org/wiki/How_to_debug_Firefox_problems?rd=Bug_info_Firefox#Testing_Mozilla_binaries
https://fedoraproject.org/wiki/How_to_debug_Firefox_problems?rd=Bug_info_Firefox#Collect_information_for_a_bug_report
Thanks.
| Assignee | ||
Comment 6•5 years ago
|
||
A missing _NET_WM_NAME shouldn't be fatal, but a missing window might be.
ideasman42, can you find for us the output of xprop -root _NET_SUPPORTING_WM_CHECK and then use that for xprop -id <window id> _NET_WM_NAME, please?
Updated•5 years ago
|
| Assignee | ||
Comment 7•5 years ago
|
||
This can be reproduced by unsetting XDG_CURRENT_DESKTOP and killing the window manager process, which leaves the _NET_SUPPORTING_WM_CHECK property on the root window, but destroys the referenced window. Perhaps this may demonstrate when switching to window managers that do not set a new _NET_SUPPORTING_WM_CHECK property, or when the look-up is performed during the switchover of window managers.
| Assignee | ||
Comment 9•5 years ago
|
||
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
Comment 10•5 years ago
|
||
Comment 11•5 years ago
|
||
| bugherder | ||
Comment 12•5 years ago
|
||
The patch landed in nightly and beta is affected.
:karlt, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 13•5 years ago
|
||
Comment on attachment 9193401 [details]
Bug 1673767 trap fatal X errors when looking up _NET_WM_NAME on _NET_SUPPORTING_WM_CHECK window r?stransky
Beta/Release Uplift Approval Request
- User impact if declined: Start-up crash. AFAIK this should only occur in unusual situations, but we have two different reporters. With bug 1682402 unfixed, we don't know how much this is occurring.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Simple fix.
- String changes made/needed: None.
Comment 14•5 years ago
|
||
Comment on attachment 9193401 [details]
Bug 1673767 trap fatal X errors when looking up _NET_WM_NAME on _NET_SUPPORTING_WM_CHECK window r?stransky
approved for 85.0b5
Comment 15•5 years ago
|
||
| bugherder uplift | ||
Updated•5 years ago
|
Updated•5 years ago
|
Updated•4 years ago
|
Description
•