Bug 1673767 trap fatal X errors when looking up _NET_WM_NAME on _NET_SUPPORTING_WM_CHECK window r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D99855